roles/servers/files/10.32.16.236/iptables
# Generated by iptables-save v1.3.5 on Wed Dec 19 06:34:18 2012
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:LOGGING - [0:0]

## Allow input that the output has been established
# or related -- MULYADI --
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

-A INPUT -i lo -j ACCEPT

## Allow Access from Josefh VPN IP
-A INPUT -s 192.168.3.1 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT

-A INPUT ! -s 10.32.0.0/16 -p tcp -m tcp --sport 21 -m conntrack --ctstate NEW,RELATED,ESTABLISHED -j ACCEPT
-A INPUT ! -s 10.32.0.0/16 -p tcp -m tcp --sport 20 -m conntrack --ctstate NEW,RELATED,ESTABLISHED -j ACCEPT

## Allow Access from old tuyul,
-A INPUT -s 10.32.16.179 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.16.180 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
#-A INPUT -s 10.32.16.186 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.16.179 -p udp -m udp --dport 161 -m state --state NEW,ESTABLISHED -j ACCEPT 
#-A INPUT -s 10.32.15.190 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow Access from ADMIN VLAN 4 for SSH, SMTP and NTOP
#-A INPUT -s 10.32.16.64/255.255.255.192 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT
#-A INPUT -s 10.32.16.64/255.255.255.192 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
#-A INPUT -s 10.32.16.64/255.255.255.192 -p tcp -m tcp --dport 3000 -m state --state NEW,ESTABLISHED -j ACCEPT 
#-A INPUT -s 10.32.16.64/255.255.255.192 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT 
#-A INPUT -s 10.32.16.64/255.255.255.192 -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT 

## Allow Access from ADMIN VLAN 5 for SSH, SMTP and NTOP
#-A INPUT -s 10.32.5.0/255.255.255.0 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT
#-A INPUT -s 10.32.5.0/255.255.255.0 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.5.0/255.255.255.0 -p tcp -m tcp -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.100.18 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
#-A INPUT -s 10.32.5.0/255.255.255.0 -p tcp -m tcp --dport 3000 -m state --state NEW,ESTABLISHED -j ACCEPT 

#HTTP(S) allow rule are merged with the next rules below
#-A INPUT -s 10.32.5.0/255.255.255.0 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT 
#-A INPUT -s 10.32.5.0/255.255.255.0 -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT 

## Allow Access to HTTP/HTTPS services
-A INPUT -s 10.32.0.0/255.255.0.0 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -s 10.32.0.0/255.255.0.0 -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT 

## Allow Access Proxy Service
-A INPUT -s 10.32.0.0/255.255.0.0 -p tcp -m tcp --dport 3128 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -s 192.168.3.0/255.255.255.0 -p tcp -m tcp --dport 3128 -m state --state NEW,ESTABLISHED -j ACCEPT 
#our Squid only listen using TCP protocol, so get rid of UDP access -- MULYADI
#-A INPUT -s 10.32.0.0/255.255.0.0 -p udp -m udp --dport 3128 -m state --state NEW,ESTABLISHED -j ACCEPT 

## Allow Access NTP Service
-A INPUT -s 10.32.0.0/255.255.0.0 -p udp -m udp --dport 123 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -s 10.32.0.0/255.255.0.0 -p tcp -m tcp --dport 123 -m state --state NEW,ESTABLISHED -j ACCEPT 

## Allow Access DNS Service
-A INPUT -s 192.168.3.0/255.255.255.0 -p udp -m udp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -s 10.32.0.0/255.255.0.0 -p udp -m udp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -s 10.32.0.0/255.255.0.0 -p tcp -m tcp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT 


## Allow ICMP packets
# Only allow type 11 Time exceeded? Not quite sure we need it -- MULYADI --
#-A INPUT -p icmp --icmp-type 11 -j ACCEPT

## Log the rest
#-A INPUT -j LOGGING
#-A LOGGING -i eth0 -m limit --limit 120/min -j LOG --log-prefix "IPTABLES INPUT DROP: " --log-level 5


###################################### OUTPUT RULES ############################################
## Allow output that the input has been established
-A OUTPUT -o eth0 -p tcp -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -o eth0 -p udp -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT 

## Allow output from loopback
-A OUTPUT -o lo -j ACCEPT 

## Allow output to dns server for domain service
# we already allow access to UDP port 123 below, so below one is not needed -- MULYADI --
#-A OUTPUT -d 10.32.16.238 -p udp -m udp --dport 123 -m state --state NEW,ESTABLISHED -j ACCEPT 

## Allow output to ldap server for ldap service
-A OUTPUT -d 10.32.16.241 -p tcp -m tcp --dport 389 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -d 10.32.16.241 -p tcp -m tcp --dport 636 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -d 10.32.16.241 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.16.241 -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow output to any hosts for service domain(53), ntp(123), ssh(22), telnet(23), snmp(161)
-A OUTPUT -p udp -m udp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -m udp --dport 161 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123  -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT  
-A OUTPUT -p tcp -m tcp --dport 23 -m state --state NEW,ESTABLISHED -j ACCEPT

# squid needs to access below ports to fetch content from Internet -- MULYADI --
-A OUTPUT -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 21 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 20 -m state --state NEW,ESTABLISHED -j ACCEPT

# allow yahoo messenger to contact outside world -- MULYADI --
-A OUTPUT -p tcp -m tcp --dport 5050 -m state --state NEW,ESTABLISHED -j ACCEPT

-A OUTPUT -p tcp -m tcp --sport 1024: --dport 1024: -m state --state ESTABLISHED,RELATED -j ACCEPT 

#allow output from any 1rstwap IP addresses to DMZ servers
-A OUTPUT -s 10.32.0.0/16 -d 10.32.10.0/24 -p tcp -m tcp --dport 8080 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -s 10.32.0.0/16 -d 10.32.10.0/24 -p tcp -m tcp --dport 8443 -m state --state NEW,ESTABLISHED -j ACCEPT

# allow to hit smsapiv2 for testing MKT
-A OUTPUT -d 10.32.10.89 -p tcp -m tcp --dport 8080 -m state --state NEW,ESTABLISHED -j ACCEPT

-A OUTPUT -p icmp -j ACCEPT

## Loggin the rest
#-A OUTPUT -j LOGGING
#-A LOGGING -o eth0 -m limit --limit 120/min -j LOG --log-prefix "IPTABLES OUTPUT DROP: " --log-level 5
#-A LOGGING -j DROP
COMMIT
# Completed on Wed Dec 19 06:34:18 2012
